# Algorithms-DataStructures

./: .gitignore  Algorithms-DataStructures.sln  Algorithms-DataStructures.vcxproj  Algorithms-DataStructures.vcxproj.filters  CMakeLists.txt  README.md
Algorithms-DataStructures/: ints0.h  intsapp.cpp  roman1.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/1-1_Introduction/: roman1.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/1-2_References-and-Reference-Counting/: ints.cpp  ints.h  ints0.cpp  ints0.h  intsapp.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/1-3_Function-Templates/: swap.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/1-4_Recursive-Functions/: roman2.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/1-5_Dynamic-Arrays-Chunks-and-Class-Templates/: chunk.cpp  tplchunk.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/1-6_Exception-Handling/: except.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/Exercises/1.1/: README.md  charstring.cpp  charstring.h
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/Exercises/1.2/: README.md  ReversePrint.cpp  ReversePrint.h  main.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/Exercises/1.3/: README.md  roman3.cpp
Project/src/Chapter1-Some-Aspects-of-Programming-in-C++/Exercises/1.4/: README.md  main.cpp
Project/src/Chapter2-Arithmetic/2-3_Radix-Conversion-for-Input-Operations/: buildnum.cpp
Project/src/Chapter2-Arithmetic/2-4_Radix-Conversion-for-Output-Operations/: buildnum.cpp  num2char.cpp
Project/src/Chapter2-Arithmetic/2-6_Double-precision-Unsigned-Integers/: dblulong.cpp
Project/src/Chapter2-Arithmetic/2-7_Multi-precision-Arithmetic/: lapp.cpp  large.cpp  large.h
Project/src/Chapter2-Arithmetic/2-8_Binomial-Coefficients/: binom.cpp
